--- a/menu/Get_Out.html
+++ b/menu/Get_Out.html
@@ -16,30 +16,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-<style>
-    * {
-
-        font-family: "Noto Sans Lao", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: 500;
-        font-style: normal;
-        font-variation-settings:
-            "wdth" 87.5;
-    }
-    a{
-        text-decoration: none !important;
-        color: #000 !important;
-    }
-    .activess{
-        color: blue !important;
-    }
-    .text-one{
-        text-align: center;
-        font-size: 50px;
-        color: rgb(3, 3, 75);
-        letter-spacing: 3px;
-    }
-</style>
 
 <style>
     * {
@@ -55,7 +31,7 @@
 
     h1 {
         text-align: center;
-        background-color: aqua;
+       background-color: brown;
     }
     .Form_Entry{
         width: 100;
