--- a/menu/Add_In.html
+++ b/menu/Add_In.html
@@ -32,7 +32,7 @@
 
     h1 {
         text-align: center;
-        background-color: aquamarine;
+        background-color: rgb(165, 67, 42);
     }
     .Form_Entry{
         width: 100;
