--- a/menu/Get_Out.html
+++ b/menu/Get_Out.html
@@ -31,7 +31,7 @@
 
     h1 {
         text-align: center;
-       background-color: brown;
+       background-color: rgb(228, 54, 121);
     }
     .Form_Entry{
         width: 100;
