--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="menu/History.html">ການເຄື່ອນໄຫວ</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="menu/Grade/Vew_Grade.html">list From Grade</a>
+            </li>
         </ul>
     </nav>
 
