--- a/menu/Get_Out.html
+++ b/menu/Get_Out.html
@@ -3,10 +3,28 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML form to Google Sheet</title>
-    <script type="text/javascript" src="jquery.min.js"></script>
+    <title>Home_Page</title>
+    	<!-- Bootstrap CSS 5.1.1 -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+    crossorigin="anonymous">
+
+   <!-- Google Fonts -->
+   <link href='https://fonts.googleapis.com/css?family=Itim|Kanit|Mali|Mitr|Niramit|Pattaya|Prompt|Questrial|Sarabun|Sriracha'
+    rel='stylesheet' type='text/css'>
+
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/sheetrock@1.2.0/dist/sheetrock.min.js"></script>
+<script src="https://unpkg.com/datatables@1.10.18/media/js/jquery.dataTables.min.js"></script>
+</head>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/1.11.2/css/dataTables.bootstrap4.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/searchbuilder/1.2.1/css/searchBuilder.bootstrap5.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/datetime/1.1.1/css/dataTables.dateTime.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.bootstrap4.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/colreorder/1.5.4/css/colReorder.dataTables.min.css">
+
 </head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,26 +35,30 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 
-<style>
-    * {
-        font-family: phetsarath ot;
-        text-align: center;
-    }
-
-    .tex_Descriptoin {
-        width: 100%;
-        height: 50px;
-        text-align: start;
-    }
-
-    h1 {
-        text-align: center;
-       background-color: rgb(228, 54, 121);
-    }
-    .Form_Entry{
-        width: 100;
-    }
-</style>
+    <style>
+        * {
+    
+            font-family: "Noto Sans Lao", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 500;
+            font-style: normal;
+            font-variation-settings:
+                "wdth" 87.5;
+        }
+        a{
+            text-decoration: none !important;
+            color: #000 !important;
+        }
+        .activess{
+            color: blue !important;
+        }
+        .text-one{
+            text-align: center;
+            font-size: 50px;
+            color: rgb(3, 3, 75);
+            letter-spacing: 3px;
+        }
+    </style>
 
 <body>
 
@@ -54,9 +76,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="History.html">ການເຄື່ອນໄຫວ</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Grade/Vew_Grade.html">list From Grade</a>
+            </li>
         </ul>
     </nav>
-
+<center>
     <h1 id="msg"><b><i><u>ບັນທຶກການຈ່າຍປື້ມອອກ</u></i></b></h1>
     <form class="Form_Entry">
 
@@ -70,10 +95,10 @@
         <input type="text" class="Description" name="Description" required placeholder='enter Description'>
         <br><br>
 
-        <center><input type="submit" id="sub" value="ບັນທຶກ"></center>
+        <input type="submit" id="sub" value="ບັນທຶກ">
 
     </form>
-
+</center>
 
     <script>
         let form = document.querySelector("form");
